syntax = "proto3";
package proto.comment;
option go_package = "rpc-douyin/src/proto/comment";

import "user.proto";

message CommentPostRequest {
  int64 user_id = 1;
  int64 video_id = 2;
  string comment_text = 3;
}

message CommentDelRequest {
  int64 comment_id = 1;
}

message CommentActionResponse {
  optional Comment comment = 1; // 评论成功返回评论内容，不需要重新拉取整个列表
}

message CommentListRequest {
  int64 video_id = 1;
}

message CommentListResponse {
  repeated Comment comment_list = 1;
}

message CommentCountRequest {
  int64 video_id = 1;
}

message CommentCountResponse {
  int64 count = 1;
}

message Comment {
  int64 id = 1;
  user.User user = 2;
  string content = 3;
  string create_data = 4; // 评论发布日期，格式 mm-dd
}

service CommentService {
  rpc CommentPost(CommentPostRequest) returns (CommentActionResponse);
  rpc CommentDel(CommentDelRequest) returns (CommentActionResponse);
  rpc CommentList(CommentListRequest) returns (CommentListResponse);
  rpc CommentCount(CommentCountRequest) returns (CommentCountResponse);
}